--- a/Frontend/student.html
+++ b/Frontend/student.html
@@ -1,11 +1,20 @@
-<!-- Личный кабинет ученика -->
+student,html:
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Кабинет ученика</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-
+    <div style="text-align: center; margin-top: 50px;">
+        <h1>Привет, Ученик! 👋</h1>
+        <p>Ты успешно авторизовался.</p>
+        <p>Здесь будет меню и заказы.</p>
+        <br>
+        <a href="/" style="color: blue; text-decoration: underline;">На главную</a>
+        <br><br>
+        <a href="/logout" style="color: red;">Выйти из аккаунта</a>
+    </div>
 </body>
 </html>
