--- a/Frontend/cook.html
+++ b/Frontend/cook.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="povar.css">
+    <link rel="stylesheet" href="/css/style.css">
+
     <title>Повар</title>
 </head>
 <body>
@@ -51,6 +52,6 @@
         </div>
     </div>
 
-    <script src="povar.js"></script>
+    <script src="/js/cook.js"></script>
 </body>
 </html>
