--- a/Frontend/cook.html
+++ b/Frontend/cook.html
@@ -3,85 +3,397 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <title>Повар</title>
+    <title>Повар — Столовая Школа 2098</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: Candara, sans-serif;
+        }
+
+        body {
+            background: linear-gradient(135deg, #e3f2fd, #ffffff);
+            color: #333;
+            min-height: 100vh;
+            padding-top: 70px;
+        }
+
+        /* Шапка */
+        .shapka {
+            background: white;
+            padding: 15px 20px;
+            box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            z-index: 100;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .title {
+            color: #0d47a1;
+            font-size: 20px;
+            font-weight: bold;
+            text-align: center;
+        }
+
+        /* Основной макет */
+        .main-layout {
+            display: flex;
+            gap: 20px;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 15px 30px;
+        }
+
+        /* Левая панель — общая */
+        .left-panel {
+            background: white;
+            padding: 20px;
+            border-radius: 16px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            min-width: 250px;
+        }
+
+        .prof {
+            background: #2196F3;
+            color: white;
+            border: none;
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            font-size: 24px;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 20px;
+            box-shadow: 0 2px 6px rgba(33, 150, 243, 0.3);
+            transition: transform 0.2s;
+        }
+
+        .prof:hover {
+            transform: scale(1.05);
+        }
+
+        .head {
+            margin-bottom: 20px;
+            padding: 10px;
+            background: #e3f2fd;
+            color: #0d47a1;
+            border-radius: 10px;
+            text-align: center;
+            width: 100%;
+        }
+
+        .head h1 {
+            font-size: 18px;
+            margin: 0;
+            font-weight: bold;
+        }
+
+        .tabs {
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+            width: 100%;
+        }
+
+        .tab-btn {
+            padding: 12px;
+            border: none;
+            background: #f5f9ff;
+            border-radius: 12px;
+            cursor: pointer;
+            text-align: left;
+            font-weight: bold;
+            color: #555;
+            transition: all 0.2s;
+        }
+
+        .tab-btn:hover {
+            background: #d0e6ff;
+        }
+
+        .tab-btn.active {
+            background: #2196F3;
+            color: white;
+        }
+
+        .center-content {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+        }
+
+        .content {
+            width: 100%;
+            max-width: 600px;
+        }
+
+        .tab-content {
+            display: none;
+            padding: 20px;
+            background: white;
+            border-radius: 16px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+        }
+
+        .tab-content.active {
+            display: block;
+        }
+
+        label {
+            display: block;
+            margin: 18px 0 10px;
+            font-weight: 600;
+            color: #0d47a1;
+            font-size: 16px;
+        }
+
+        input, button, select {
+            padding: 12px 16px;
+            margin: 6px 0;
+            border: 2px solid #ccc;
+            border-radius: 12px;
+            font-size: 16px;
+            width: 100%;
+            max-width: 100%;
+            background: white;
+            transition: border-color 0.3s;
+        }
+
+        input:focus, select:focus {
+            outline: none;
+            border-color: #2196F3;
+        }
+
+        button {
+            background: #2196F3;
+            color: white;
+            border: none;
+            cursor: pointer;
+            font-weight: bold;
+            transition: background 0.2s;
+            width: auto;
+            padding: 12px 28px;
+            font-size: 17px;
+            border-radius: 50px;
+            margin-top: 15px;
+        }
+
+        button:hover {
+            background: #1976D2;
+        }
+
+        ul {
+            padding-left: 20px;
+            margin: 12px 0;
+        }
+
+        li {
+            margin: 8px 0;
+            font-size: 16px;
+        }
+
+        hr {
+            margin: 24px 0;
+            border: none;
+            border-top: 1px solid #eee;
+        }
+
+        /* --- СТИЛИ ДЛЯ КАРТОЧЕК --- */
+        .dish-card {
+            border: 1px solid #c3e3ff;
+            border-radius: 12px;
+            padding: 15px;
+            background: #f0f7ff;
+            margin-top: 15px;
+            display: none;
+        }
+
+        .dish-header {
+            display: flex;
+            gap: 15px;
+            align-items: start;
+        }
+
+        .dish-img {
+            width: 90px;
+            height: 90px;
+            background-color: #eee;
+            border-radius: 12px;
+            background-size: cover;
+            background-position: center;
+            flex-shrink: 0;
+            border: 2px solid white;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+
+        .dish-info h3 {
+            margin: 0 0 5px 0;
+            color: #1565C0;
+            font-size: 18px;
+        }
+
+        .dish-info p {
+            margin: 3px 0;
+            font-size: 15px;
+            color: #444;
+        }
+
+        .dish-details {
+            margin-top: 10px;
+            padding-top: 10px;
+            border-top: 1px solid #dcebf7;
+            font-size: 15px;
+            color: #555;
+        }
+
+        /* Адаптивность */
+        @media (max-width: 768px) {
+            .main-layout {
+                flex-direction: column;
+                align-items: center;
+                gap: 20px;
+            }
+
+            .left-panel {
+                width: 100%;
+                max-width: 600px;
+                flex-direction: column;
+                padding: 20px;
+            }
+
+            .tabs {
+                flex-direction: row;
+                flex-wrap: wrap;
+                justify-content: center;
+                gap: 10px;
+            }
+
+            .tab-btn {
+                text-align: center;
+                padding: 10px 12px;
+                font-size: 14px;
+                min-width: 100px;
+                flex: 1;
+            }
+
+            .center-content {
+                width: 100%;
+                max-width: 600px;
+            }
+
+            input, button, select {
+                font-size: 17px;
+                max-width: 100%;
+            }
+        }
+    </style>
 </head>
 <body>
 
     <header class="shapka">
-        <div class="golova">
-            <div class="tityle">
-                <button class="prof">👤</button>
-                <h1 class="title">Столовая ГБОУ №2098</h1>
-            </div>
-        </div>
+        <h1 class="title">Столовая — Школа 2098</h1>
     </header>
+
     <div class="main-layout">
+        <!-- Левая панель — одна для всех -->
         <aside class="left-panel">
+            <button class="prof" onclick="window.location.href='/logout'" title="Выйти">👤</button>
             <header class="head">
-                <h1>👨‍🍳 Панель повара</h1>
+                <h1>Панель повара</h1>
             </header>
             <nav class="tabs">
-                <button class="tab-btn active" data-tab="meals">🍽️ Питание</button>
-                <button class="tab-btn" data-tab="inventory">📦 Остатки</button>
-                <button class="tab-btn" data-tab="stats">📊 Статистика</button>
+                <button class="tab-btn active" data-tab="meals">Питание</button>
+                <button class="tab-btn" data-tab="inventory">Остатки</button>
+                <button class="tab-btn" data-tab="stats">Статистика</button>
             </nav>
         </aside>
 
-        <!-- Центральный контент -->
+        <!-- Единый контент -->
         <div class="center-content">
             <main class="content">
 
-                <!-- Вкладка: Выдача питания -->
+                <!-- Вкладка ПИТАНИЕ -->
                 <div id="meals" class="tab-content active">
                     <h2>Выдать питание</h2>
-                    <p>Форма для выдачи завтрака/обеда ученику.</p>
-                    <label>ID ученика: <input type="number" id="studentId" placeholder="123"></label>
-                    <button onclick="alert('Питание выдано!')">Выдать</button>
-                </div>
+                    <p style="color: #666; margin-bottom: 10px;">Выберите блюдо и укажите ученика.</p>
 
-                <!-- Вкладка: Остатки (ОБНОВЛЕНА) -->
-                <div id="inventory" class="tab-content">
-                    <h2>📦 Управление остатками</h2>
-                    <p>Выберите блюдо, чтобы узнать подробности:</p>
-
-                    <!-- Выпадающий список -->
-                    <select id="dishSelect" style="width: 100%; padding: 10px; margin-bottom: 20px; font-size: 16px;">
+                    <label>Выберите блюдо:</label>
+                    <select id="mealSelect">
                         <option value="">-- Загрузка меню... --</option>
                     </select>
 
-                    <!-- Карточка с информацией (скрыта по умолчанию) -->
-                    <div id="dishCard" style="display: none; border: 1px solid #ddd; padding: 15px; border-radius: 8px; background: #f9f9f9;">
-                        <h3 id="cardName" style="margin-bottom: 10px; color: #2256a4;">Название</h3>
-
-                        <div style="display: flex; gap: 15px;">
-                            <!-- Место для фото (если есть) -->
-                            <div id="cardImage" style="width: 100px; height: 100px; background: #ccc; border-radius: 5px; background-size: cover;"></div>
-
-                            <div>
-                                <p>🔥 Калории: <strong id="cardCalories">0</strong> ккал</p>
-                                <p>📦 На складе: <strong id="cardStock" style="font-size: 1.2em;">0</strong> шт.</p>
+                    <!-- Карточка блюда (появляется при выборе) -->
+                    <div id="mealInfoCard" class="dish-card">
+                        <div class="dish-header">
+                            <div id="mealInfoImage" class="dish-img"></div>
+                            <div class="dish-info">
+                                <h3 id="mealInfoName">Название</h3>
+                                <p>📦 На складе: <strong id="mealInfoStock" style="font-size: 1.1em;">0</strong></p>
+                                <p>🔥 Ккал: <strong id="mealInfoCalories">0</strong></p>
                             </div>
                         </div>
+                        <div class="dish-details">
+                            <strong>Состав:</strong> <span id="mealInfoIng"></span>
+                        </div>
+                    </div>
 
-                        <div style="margin-top: 15px;">
+                    <label>ID или Логин ученика:</label>
+                    <input type="text" id="studentId" placeholder="Например: student">
+
+                    <button id="btnIssue">Выдать питание</button>
+                    <p id="issueMessage" style="margin-top: 15px; font-weight: bold; min-height: 20px;"></p>
+                </div>
+
+                <!-- Вкладка ОСТАТКИ -->
+                <div id="inventory" class="tab-content">
+                    <h2>Остатки продуктов</h2>
+                    <p style="color: #666; margin-bottom: 10px;">Просмотр информации из БД.</p>
+
+                    <label>Просмотр блюда:</label>
+                    <select id="inventorySelect">
+                        <option value="">-- Загрузка меню... --</option>
+                    </select>
+
+                    <!-- Карточка просмотра -->
+                    <div id="dishCard" class="dish-card">
+                        <div class="dish-header">
+                            <div id="cardImage" class="dish-img"></div>
+                            <div class="dish-info">
+                                <h3 id="cardName">Название</h3>
+                                <p>📦 На складе: <strong id="cardStock">0</strong></p>
+                                <p>🔥 Ккал: <strong id="cardCalories">0</strong></p>
+                            </div>
+                        </div>
+                        <div class="dish-details">
                             <strong>Состав:</strong>
-                            <ul id="cardIngredients" style="padding-left: 20px; margin-top: 5px; color: #555;">
-                                <!-- Сюда JS добавит список -->
-                            </ul>
+                            <ul id="cardIngredients" style="padding-left: 20px; margin-top: 5px;"></ul>
                         </div>
                     </div>
                 </div>
 
-                <!-- Вкладка: Статистика -->
+                <!-- Вкладка СТАТИСТИКА -->
                 <div id="stats" class="tab-content">
                     <h2>Статистика</h2>
                     <p>Выдано порций: <strong>24</strong></p>
+                    <hr>
+                    <p style="color: gray;">График в разработке...</p>
                 </div>
             </main>
         </div>
     </div>
 
+    <!-- Подключение внешнего JS -->
     <script src="/js/cook.js"></script>
 </body>
 </html>
