index + login подключены

--- a/Frontend/cook.html
+++ b/Frontend/cook.html
@@ -387,7 +387,7 @@
                     <h2>Статистика</h2>
                     <p>Выдано порций: <strong>24</strong></p>
                     <hr>
-                    <p style="color: gray;">График в разработке...</p>
+                    <p style="color: gray;">Скоро...</p>
                 </div>
             </main>
         </div>
